--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,10 +18,10 @@
    opacity: 0;
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
       visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.backdrop__is-hidden .modal {
-   transform: translate(50%, 50%) scale(0, 3);
+   & .modal {
+      transform: translate(50%, 50%) scale(0, 3);
+   }
 }
 .modal {
    position: absolute;
