--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,7 +8,8 @@
    font-size: 26px;
    line-height: 1.192;
    letter-spacing: inherit;
-   padding: 24px 0 25px 0;
+   padding-top: 24px;
+   padding-bottom: 25px;
 
    /* голубая часть логотипа сайта */
    &--blue {
