--- a/sass/components/_pattern-list.scss
+++ b/sass/components/_pattern-list.scss
@@ -74,9 +74,9 @@
    line-height: 2;
    letter-spacing: 0.06em;
    color: $main-text-color;
+   margin-bottom: 4.09px;
 }
 .product-link__article {
-   margin-top: 4.09px;
    font-size: 16px;
    line-height: 1.875;
    letter-spacing: 0.03em;
