--- a/css/main.css
+++ b/css/main.css
@@ -328,7 +328,8 @@ img {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: inherit;
-  padding: 24px 0 25px 0;
+  padding-top: 24px;
+  padding-bottom: 25px;
   /* голубая часть логотипа сайта */
 }
 
@@ -410,6 +411,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-decoration: none;
   font-weight: 500;
   font-size: inherit;
@@ -501,7 +505,7 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop__is-hidden .modal {
+.backdrop__is-hidden.modal {
   -webkit-transform: translate(50%, 50%) scale(0, 3);
           transform: translate(50%, 50%) scale(0, 3);
 }
@@ -555,11 +559,11 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  margin-bottom: 12px;
 }
 
 .form {
-  width: 448px;
-  margin-top: 12px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -644,9 +648,9 @@ img {
 }
 
 .form__input {
-  margin-top: 4px;
   height: 40px;
   font-size: 14px;
+  margin-top: 4px;
   border: 1px solid #21212133;
   border-radius: 4px;
   padding: 12px 42px;
@@ -778,13 +782,13 @@ img {
   font-size: 36px;
   line-height: 1.166;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .business__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 50px;
 }
 
 .business__item {
@@ -803,12 +807,12 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   height: 70px;
   font-weight: 500;
@@ -832,13 +836,13 @@ img {
   line-height: 1.166;
   text-align: center;
   letter-spacing: inherit;
+  margin-bottom: 50px;
 }
 
 .our-team__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 50px;
 }
 
 .our-team__item {
@@ -863,6 +867,7 @@ img {
   text-align: center;
   line-height: 1.187;
   letter-spacing: inherit;
+  margin-bottom: 10px;
 }
 
 .our-team__position {
@@ -870,7 +875,7 @@ img {
   letter-spacing: inherit;
   text-align: center;
   line-height: 1.187;
-  margin-top: 10px;
+  margin-bottom: 16px;
   color: #757575;
 }
 
@@ -878,7 +883,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 16px;
 }
 
 .team-social__item:not(:last-child) {
@@ -889,12 +893,12 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-radius: 50%;
   color: #afb1b8;
   width: 44px;
@@ -946,12 +950,12 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 170px;
   height: 92px;
   border-radius: 4px;
@@ -996,8 +1000,8 @@ img {
   color: #fff;
 }
 
-.logo-address__list {
-  margin-top: 20px;
+.logo-container {
+  margin-bottom: 20px;
 }
 
 .logo-address__item:not(:last-child) {
@@ -1037,13 +1041,13 @@ img {
   letter-spacing: inherit;
   text-transform: uppercase;
   color: #fff;
+  margin-bottom: 20px;
 }
 
 .social-network__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 20px;
 }
 
 .social-network__item:not(:last-child) {
@@ -1054,12 +1058,12 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-radius: 50%;
   background-color: #ffffff1a;
   width: 44px;
@@ -1093,6 +1097,7 @@ img {
   letter-spacing: inherit;
   text-transform: uppercase;
   color: #fff;
+  margin-bottom: 20px;
 }
 
 .footer-form__item {
@@ -1114,7 +1119,6 @@ img {
   background-color: inherit;
   color: #fff;
   font-size: 16px;
-  margin-top: 20px;
   padding: 0 16px;
 }
 
@@ -1173,7 +1177,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-family: inherit;
   color: #fff;
   font-weight: 700;
@@ -1198,13 +1204,16 @@ img {
 }
 
 .filter-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .filter-list__item:not(:last-child) {
@@ -1338,10 +1347,10 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
+  margin-bottom: 4.09px;
 }
 
 .product-link__article {
-  margin-top: 4.09px;
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.03em;
