--- a/sass/components/_business.scss
+++ b/sass/components/_business.scss
@@ -8,10 +8,10 @@
    font-size: 36px;
    line-height: 1.166;
    text-align: center;
+   margin-bottom: 50px;
 }
 .business__list {
    display: flex;
-   margin-top: 50px;
 }
 
 .business__item {
@@ -25,9 +25,7 @@
    position: absolute;
    bottom: 0;
    left: 0;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   @include centeredFlex();
    width: 100%;
    height: 70px;
    font-weight: 500;
