--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -16,8 +16,7 @@
 /* стилизации контактов*/
 
 .contacts__link {
-   display: flex;
-   align-items: center;
+   @include centeredFlex();
    text-decoration: none;
    font-weight: 500;
    font-size: inherit;
