--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -17,9 +17,7 @@
    margin-right: $basic-card-gap;
 }
 .customers__link {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   @include centeredFlex();
    width: 170px;
    height: 92px;
    border-radius: 4px;
