--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,6 +1,5 @@
 .form {
-   width: 448px;
-   margin-top: 12px;
+   width: 100%;
    margin-left: auto;
    margin-right: auto;
 }
@@ -66,9 +65,9 @@
    margin-left: 3px;
 }
 .form__input {
-   margin-top: 4px;
    height: 40px;
    font-size: 14px;
+   margin-top: 4px;
    border: 1px solid #21212133;
    border-radius: 4px;
    padding: 12px 42px;
