--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,5 @@
 /* модальное окно*/
+
 .backdrop {
    position: fixed;
    top: 0;
@@ -10,19 +11,20 @@
    z-index: 2;
    opacity: 1;
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.backdrop__is-hidden {
-   visibility: hidden;
-   pointer-events: none;
-   opacity: 0;
-   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &__is-hidden {
+      visibility: hidden;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-   & .modal {
-      transform: translate(50%, 50%) scale(0, 3);
+      &.modal {
+         transform: translate(50%, 50%) scale(0, 3);
+      }
    }
 }
+
 .modal {
    position: absolute;
    top: 50%;
@@ -65,4 +67,5 @@
    text-align: center;
    letter-spacing: 0.03em;
    color: $main-text-color;
+   margin-bottom: 12px;
 }
