--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -10,10 +10,10 @@
    line-height: 1.166;
    text-align: center;
    letter-spacing: inherit;
+   margin-bottom: 50px;
 }
 .our-team__list {
    display: flex;
-   margin-top: 50px;
 }
 .our-team__item {
    background-color: $main-color;
@@ -34,26 +34,24 @@
    text-align: center;
    line-height: 1.187;
    letter-spacing: inherit;
+   margin-bottom: 10px;
 }
 .our-team__position {
    font-size: 16px;
    letter-spacing: inherit;
    text-align: center;
    line-height: 1.187;
-   margin-top: 10px;
+   margin-bottom: 16px;
    color: $second-text-color;
 }
 .team-social__list {
    display: flex;
-   margin-top: 16px;
 }
 .team-social__item:not(:last-child) {
    margin-right: 10px;
 }
 .team-social__link {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   @include centeredFlex();
    border-radius: 50%;
    color: rgba(175, 177, 184, 1);
    width: 44px;
