--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "utils/variables";
 @import "base/normalize";
+@import "utils/mixin";
 @import "utils/body-img";
 @import "components/containers";
 @import "components/header";
@@ -7,6 +8,7 @@
 @import "components/navigation";
 @import "components/contacts";
 @import "components/hero";
+@import "components/buttons";
 @import "components/modal";
 @import "components/form";
 @import "components/features";
