--- a/sass/components/_pattern-list.scss
+++ b/sass/components/_pattern-list.scss
@@ -15,6 +15,7 @@
 .product-link {
    text-decoration: none;
    display: block;
+   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
    &:hover,
    &:focus {
