--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/features";
 @import "components/business";
 @import "components/our-team";
+@import "components/team-social-list";
 @import "components/customers";
 @import "components/footer";
 @import "components/portfolio-content";
